# fractLrag

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
corpus/: benchmark_results.json  build_grounded_queries.py  cv_results.json  fetch_pubmed.py  medical_corpus.json  medical_queries.json
docs/: 2026-04-22-074458-fractal_results-plan.txt  FORWARD_PLAN.md  HANDOFF_2026-04-22.md
fractrag/: __init__.py  core.py  engine.py  profile.py  query.py  storage.py
fractrag/benchmarks/: cross_validation.py  flat_vs_fractal.py
legacy/: chatbot.py  diag_per_query.py  doctronic_b2b_outsourced_intelligence.py  doctronic_primary_care_ownership.py  fractal_latent_rag_poc.py  fractal_sota_rag_poc.py  fractal_sota_rag_v3.py  xai_musk_knowledge_engine_demo.py
tests/: conftest.py  test_benchmark_fractal_vs_flat.py  test_chunking.py  test_cross_validation.py  test_diversity_scoring.py  test_doctronic_b2b.py  test_doctronic_primary_care.py  test_domain_routing.py  test_fractal_latent_rag_poc.py  test_fractal_sota_rag_poc.py  test_fractal_sota_rag_v3.py  test_metadata.py  test_per_type_boosts.py  test_query_classifier.py  test_rrf.py  test_storage.py  test_title_prefix.py  test_virtual_paragraphs.py  test_weighted_pooling.py  test_xai_knowledge_engine.py
