[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fractrag"
version = "0.1.0"
description = "Fractal Latent RAG — Multi-scale retrieval with derivative signals"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "deesatzed"},
]
keywords = ["rag", "retrieval", "fractal", "embeddings", "nlp", "information-retrieval"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2.0",
]
benchmark = [
    "sentence-transformers>=2.2.0",
    "scipy>=1.7.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scipy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/deesatzed/fractLrag"
Repository = "https://github.com/deesatzed/fractLrag"
Issues = "https://github.com/deesatzed/fractLrag/issues"

[tool.setuptools.packages.find]
include = ["fractrag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["fractrag"]
omit = ["fractrag/benchmarks/*"]

[tool.coverage.report]
show_missing = true
